--- a/src/App/src/components/ChatHistoryListItemCell/ChatHistoryListItemCell.module.css
+++ b/src/App/src/components/ChatHistoryListItemCell/ChatHistoryListItemCell.module.css
@@ -1,13 +1,12 @@
 .itemCell {
-  min-height: 32px;
+  height: 38px;
   cursor: pointer;
-  padding-left: 12px;
-  padding-right: 4px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 5px 4px 5px 12px;
   box-sizing: border-box;
   border-radius: 5px;
   display: flex;
+  align-items: center;
+  transition: background-color 0.2s ease;
 }
 
 .itemCell:hover {
@@ -27,7 +26,7 @@
   border: 1px solid #d1d1d1;
   border-radius: 5px;
   background-color: white;
-  margin: auto 2.5px;
+  margin: 0 2.5px;
   cursor: pointer;
 }
 
@@ -36,20 +35,22 @@
 }
 
 .chatTitle {
-  width: 70%;
+  flex: 1;
+  min-width: 0;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding-right: 8px;
 }
 
 .chatHistoryItem {
   width: 100%;
   justify-content: space-between;
-  position: relative
+  position: relative;
 }
 
 .chatHistoryItemsButtonsContainer {
-  position: absolute;
-  right: 0;
+  flex-shrink: 0;
+  margin-left: auto;
 }
 
