history panel bug fix

--- a/src/App/src/components/ChatHistoryListItemCell/ChatHistoryListItemCell.module.css
+++ b/src/App/src/components/ChatHistoryListItemCell/ChatHistoryListItemCell.module.css
@@ -40,7 +40,6 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding-right: 8px;
 }
 
 .chatHistoryItem {
@@ -51,6 +50,6 @@
 
 .chatHistoryItemsButtonsContainer {
   flex-shrink: 0;
-  margin-left: auto;
+  margin-left: 8px;
 }
 
